--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -780,7 +780,7 @@ top:5.5px;
 .AllergeContainerList {
     box-sizing: border-box;
 width: 550px;
-height: 150px;
+height: 200px;
 margin-left: calc(50% - 275px);
 margin-top: 40px;
 background: #FFFFFF;
@@ -832,11 +832,11 @@ color: #000000;
 position: absolute;
 margin-top: 2.5vh;
 margin-left: 2.5vw;
-
+width: 450px;
 font-family: 'Acme';
 font-style: normal;
 font-weight: 400;
-font-size: 16px;
+font-size: 13px;
 line-height: 30px;
 /* or 188% */
 display: flex;
