--- a/front/src/style/style_1.scss
+++ b/front/src/style/style_1.scss
@@ -365,6 +365,10 @@ font-weight: 600;
    background: #F6F6F6;
    box-shadow: 6px 6px 14px 0px rgba(0, 0, 0, 0.25) inset;
    cursor: pointer;
+}.Mypage-caution-img img{
+   width: inherit;
+   height: inherit;
+   object-fit: contain;
 }
  
  .Mypage-caution-content { /*약 이름 + 주의사항 컨테이너*/
@@ -392,10 +396,10 @@ font-weight: 600;
  }
  
  .Mypage-caution-about { /*주의사항*/
-   margin-top: 16px;
    color: #000;
    font-family: 'Pretendard';
-   font-size: 16px;
+   width: 550px;
+   font-size: 13px;
    font-style: normal;
    font-weight: 500;
    line-height: 25px;
