--- a/front/src/style/style_1.scss
+++ b/front/src/style/style_1.scss
@@ -305,6 +305,7 @@ font-weight: 600;
    max-width: 830px;
 
    color: #000;
+   gap: 17.5px;
 
    font-family: 'Pretendard';
    font-size: 16px;
@@ -312,12 +313,26 @@ font-weight: 600;
    line-height: 25px; /* 156.25% */
 }
 .Mypage-se-content {
-   width: 62px;
-   display: flex;
-   flex-direction: column;
    align-items: center;
+   margin-top: 50px;
+   width: 50px;
+   height: 15px;
+   background: #AAB3FF;
+   border-radius: 30px;
+   display: flex;
+   justify-content: center;
+   font-family: 'Pretendard';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 8px;
+   line-height: 10px;
+   color: #FFFFFF;
 }
-.Mypage-se-content img{
+.Mypage-se-img{
+   position: absolute;
+   display: flex;
+   gap: 27px;
+   margin-left: 8px;
    margin-bottom: 12px;
    width: 100%;
 }
