--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -1399,10 +1399,10 @@ cursor: pointer;
     /* Rectangle 75 */
 
 position: absolute;
+top: -150px;
 width: 150px;
 height: 35px;
-left: 66.5vw;
-margin-top: 22vh;
+right:-6px;
 /* main color */
 background: #AAB3FF;
 border-radius: 30px;
@@ -1431,10 +1431,10 @@ color: #FFFFFF;
     /* Rectangle 76 */
 
 position: absolute;
+top: -100px;
 width: 150px;
 height: 35px;
-left: 66.5vw;
-margin-top: 29.5vh;
+right: -6px;
 
 /* N 1 */
 background: #FFB3B3;
