--- a/front/src/style/style_1.scss
+++ b/front/src/style/style_1.scss
@@ -45,6 +45,10 @@
    border: 1px solid #AAB3FF;
    box-shadow: 0px 0px 25px 7px rgba(170, 179, 255, 0.30);
    font-family: 'Pretendard';
+   @media only screen and (max-width: 800px) {
+      width: 500px;
+  }
+
 }
 
 .loginBox-title{ /* 로그인 */
@@ -52,6 +56,9 @@
    color:  #000958;
    font-size: 28px;
    font-weight: 700;
+   @media only screen and (max-width: 800px) {
+      font-size: 20px;
+  }
 }
 
 .loginBox-contents{ /* 아이디, 비밀번호 */
@@ -59,6 +66,9 @@
    color: #000958;
    font-size: 16px;
    font-weight: 600;
+   @media only screen and (max-width: 800px) {
+      font-size: 14px;
+  }
 }
 
 .login-tf{ /* login id input */
