--- a/front/src/style/style_1.scss
+++ b/front/src/style/style_1.scss
@@ -189,10 +189,15 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   overflow: hidden;
 }
 
 .register-svg{
    height: 925px;
+   @media only screen and (max-width: 800px) {
+      width: 500px;
+      visibility: hidden;
+   }
 }
 
 .register-box{
@@ -204,12 +209,25 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+@media only screen and (max-width: 800px) {
+   width: 500px;
+}
+@media only screen and (max-width: 440px) {
+width: 300px;
+}
+
 }
 
 .register-title{
 color:  #000958;
 font-size: 28px;
 font-weight: 700;
+@media only screen and (max-width: 800px) {
+   font-size: 20px;
+}
+@media only screen and (max-width: 440px) {
+font-size: 16px;
+}
 }
 
 .register-tf{ 
@@ -221,6 +239,12 @@ height: 58px;
 border-radius: 16px;
 border: 1px solid #AAB3FF;
 box-shadow: 0px 0px 10px 0px rgba(170, 179, 255, 0.40);
+@media only screen and (max-width: 800px) {
+   width: 250px
+}
+@media only screen and (max-width: 440px) {
+   width: 250px
+}
 }
 
 .register-tf input{
@@ -232,6 +256,12 @@ color: #000958;
 font-family: 'Pretendard';
 font-size: 16px;
 font-weight: 500;
+@media only screen and (max-width: 800px) {
+   width: 200px
+}
+@media only screen and (max-width: 440px) {
+   width: 200px
+}
 }
 
 .registerBtn{ 
