--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -4,12 +4,13 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 /* 로고에 대한 스타일 */
 .Logo {
     position: absolute;
-    width: 80px;
-    height: 60px;
+    width: 3.5vw;
+    height:10vh;
     top: 30px;
     left: 5%;
 }
@@ -196,8 +197,8 @@ transform-origin: center center; /* 회전 중심을 가운데로 조정 */
 .search {
     box-sizing: border-box;
     position: absolute;
-    width: 550px;
-    height: 40px;
+    width: 36.5vw;
+    height: 5vh;
     max-width: 90vw;
     top: 20%;
     left: 50%;
@@ -205,22 +206,23 @@ transform-origin: center center; /* 회전 중심을 가운데로 조정 */
     background: #FFFFFF;
     border: 1px solid #AAB3FF;
     box-shadow: 0px 0px 10px rgba(170, 179, 255, 0.4);
-    border-radius: 10px;
+    border-radius: 0.75vw;
     z-index: 4;
 }
 
 /* 검색 바 입력에 대한 스타일 */
 .searchbar {
     position: absolute;
-    left: calc(50% - 215px);
+    left: 35vw;
+    
     top: 17.5%;
-    width: 490px;
-    height: 40px;
+    width: 29vw;
+    height: 5vh;
     border-radius: 16px;
     border: none;
     background: transparent;
     font-family: Pretendard;
-    font-size: 14px;
+    font-size: 0.8vw;
     font-weight: 600;
     line-height: 17px;
     letter-spacing: 0em;
@@ -234,11 +236,11 @@ transform-origin: center center; /* 회전 중심을 가운데로 조정 */
 box-sizing: border-box;
 
 position: absolute;
-width: 550px;
-height: 198px;
+width: 36.5vw;
+height: 27vh;
 left: 50%;
 transform: translate(-50%, -50%);
-top: 250px;
+top: 33.5vh;
 
 background: #FFFFFF;
 /* main color */
@@ -252,10 +254,10 @@ z-index: 3;
     /* 항 히스타민제 */
     position: relative;
     width: 100%;
-    height: 18px;
+    height: inherit;
     top: 20px;
     left: -35px;
-    margin-left: calc(50% - 240px);
+    margin-left: 2.5vw;
     font-family: 'Pretendard';
     font-style: normal;
     font-weight: 600;
@@ -285,18 +287,19 @@ z-index: 3;
 /* 의료 아이콘에 대한 스타일 */
 .MedIcon {
     position: absolute;
-    width: 29px;
+    width: 1.8vw;
+    height: 4vh;
+    left: 32vw;
     top: 18%;
-    left: calc(50% - 265px);
     z-index: 4;
 }
 
 /* 검색바  선에 대한 스타일 */
 .line {
     position: absolute;
-    width: 27px;
-    height: -30px;
-    left: calc(50% - 240px);
+    width: 1.75vw;
+    height: -3vh;
+    left: 33.5vw;
     top: 20%;
     border: 0.5px solid #AAB3FF;
     transform: rotate(90deg);
@@ -307,8 +310,9 @@ z-index: 3;
 .searchIcon {
     position: absolute;
     top: 18.5%;
-    right: calc(50% - 257.5px);
-    width: 22.5px;
+    right: 32vw;
+    width: 1.5vw;
+    height: 3vh;
     z-index: 4;
 }
 
@@ -548,49 +552,38 @@ text-align: center;
 color: #000958;
 
 }
-.top-info{
-    /* 상단 정보 */
-    position: absolute;
-    width: 333px;
-    height: 45px;
-    right: calc(50% - 650px);
-    top: 40px;
-}
-
 
 .Profile_picture{
     /* 프로필 사진 */
-    position: absolute;
-    width: 45px;
-    height: 45px;
-    right: calc(50% - 360px);
-    top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: inherit;
+    border-radius: 50%;
 }
 .Profile_Avatar{
     /* 구름캐릭터_대지 1_대지 1 2 */
-
 position: absolute;
+margin-top: 3vh;
+margin-left: 0.6vw;
 width: 85px;
 height: 85px;
-right: calc(50% - 385px);
-top: 32.5px;
 
 background: url("../img/goormAvatar.svg");
 filter: drop-shadow(4px 4px 20px rgba(0, 9, 88, 0.2));
 background-size: contain; /* 이미지가 컨테이너에 맞도록 조정 */
 transform-origin: center center; /* 회전 중심을 가운데로 조정 */
+background-repeat: no-repeat;
 
 }
 .Ellipse{
     /* Ellipse 35 */
 
 box-sizing: border-box;
-
-position: absolute;
+display: flex;
+justify-content: center;
 width: 45px;
 height: 45px;
-right: calc(50% - 360px);
-top: 40px;
 border-radius: 50%;
 
 background: linear-gradient(180deg, #DFDFDF 0%, rgba(217, 217, 217, 0) 100%);
@@ -599,11 +592,6 @@ border: 2px solid #000958;
 
 }
 .greetings {
-    position: absolute;
-    width: 150px;
-    height: 19px;
-    right: calc(50% - 515px);
-    top: 52px;
   
     font-family: 'Pretendard';
     font-style: normal;
@@ -632,11 +620,6 @@ border: 2px solid #000958;
 .my-page{
     /* 마이페이지 */
 
-    position: absolute;
-    width: 61px;
-    height: 17px;
-    right: calc(50% - 560px);
-    top: 54px;
 
     font-family: 'Pretendard';
     font-style: normal;
@@ -652,17 +635,19 @@ border: 2px solid #000958;
 }
 .nav{
     position: absolute;
-    right: 700px;
+    top: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    right: 10px;
 }
 .logout{
 
     /* 로그아웃 */
 
-    position: absolute;
     width: 49px;
     height: 17px;
-    right: calc(50% - 630px);
-    top: 54px;
 
     font-family: 'Pretendard';
     font-style: normal;
@@ -680,12 +665,8 @@ border: 2px solid #000958;
 .line-16{
     /* Line 16 */
 
-    position: absolute;
     width: 20px;
     height: 0px;
-    right: calc(50% - 500px);
-    top: 62.5px;
-
     border: 0.5px solid #000000;
     transform: rotate(90deg);
 }
@@ -693,11 +674,9 @@ border: 2px solid #000958;
 .line-17{
     /* Line 17 */
 
-    position: absolute;
+
     width: 20px;
     height: 0px;
-    right: calc(50% - 580px);
-    top: 62.5px;
 
     border: 0.5px solid #000000;
     transform: rotate(90deg);
