--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -52,6 +52,10 @@ display: flex;
 align-items: center;
 
 color: #FFFFFF;
+@media only screen and (max-width: 800px) {
+    font-size: 20px;
+    margin-top: 2vh;
+ }
 
 
 }
@@ -71,6 +75,10 @@ line-height: 66px;
 display: flex;
 align-items: center;
 color: #FFFFFF;
+@media only screen and (max-width: 800px) {
+    font-size: 20px;
+    margin-top: 6vh;
+ }
 }
 .Allergenie_Text{
     /* Allergenie */
@@ -89,6 +97,10 @@ color: #FFFFFF;
     display: flex;
     align-items: center;
     color: #FFFFFF;
+    @media only screen and (max-width: 800px) {
+        font-size: 20px;
+        margin-top: 10vh;
+     }
 
 
 }
@@ -116,7 +128,10 @@ letter-spacing: -0.05em;
 
 /* g 3 */
 color: #DFDFDF;
-
+@media only screen and (max-width: 800px) {
+    font-size:5px;
+    margin-top: 17vh;
+ }
 
 }
 .goorm1 {
