--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -16,20 +16,20 @@
 }
 .MedGuideContainer{
     position: absolute;
-    margin-top: 60vw;
+    top: 60vw;
     width:100%;
     height: 100vh*0.5;
     @media only screen and (max-width: 1400px) {
-        margin-top: 60vw;
+        top: 60vw;
      }
      @media only screen and (max-width: 1200px) {
-        margin-top: 90vw;
+        top: 90vw;
      }
      @media only screen and (max-width: 800px) {
-        margin-top: 90vw;
+        top: 90vw;
      }
      @media only screen and (max-width: 440px) {
-        margin-top: 60vh;
+        top: 60vh;
      }
     
 
@@ -236,6 +236,20 @@ transform-origin: center center; /* 회전 중심을 가운데로 조정 */
     box-shadow: 0px 0px 10px rgba(170, 179, 255, 0.4);
     border-radius: 0.75vw;
     z-index: 4;
+    @media only screen and (max-width: 1200px) {
+        height: 5vh;
+        border-radius: 5px;
+     }
+     @media only screen and (max-width: 1100px) {
+        height: 2.5vh;
+        border-radius: 5px;
+     }
+    @media only screen and (max-width: 440px) {
+        top: 14.5%;
+        width: 60vw;
+        height: 2.5vh;
+        border-radius: 5px;
+     }
 }
 
 /* 검색 바 입력에 대한 스타일 */
@@ -257,6 +271,13 @@ transform-origin: center center; /* 회전 중심을 가운데로 조정 */
     text-align: left;
     outline: 0;
     z-index: 4;
+    @media only screen and (max-width: 440px) {
+        top: 13.2%;
+        width: 50vw;
+        left: 25vw;
+        font-size: 2vw;
+        height: 2.5vh;
+     }
 }
 .CompletionContainer{
 /* Rectangle 51 */
@@ -276,6 +297,19 @@ border: 1px solid #AAB3FF;
 box-shadow: 0px 0px 10px rgba(170, 179, 255, 0.4);
 border-radius: 16px;
 z-index: 3;
+@media only screen and (max-width: 1200px) {
+  top: 31%;
+ }
+ @media only screen and (max-width: 1000px) {
+    top: 32%;
+   }
+ @media only screen and (max-width: 800px) {
+    top: 33%;
+   }
+@media only screen and (max-width: 440px) {
+    top: 27%;
+    width: 60vw
+ }
 
 }
 .autocomplete-list {
@@ -320,6 +354,10 @@ z-index: 3;
     left: 32vw;
     top: 18%;
     z-index: 4;
+    @media only screen and (max-width: 440px) {
+        top: 12.5%;
+        left: 21vw;
+     }
 }
 
 /* 검색바  선에 대한 스타일 */
@@ -332,6 +370,10 @@ z-index: 3;
     border: 0.5px solid #AAB3FF;
     transform: rotate(90deg);
     z-index: 4;
+    @media only screen and (max-width: 440px) {
+        top: 14.5%;
+        left: 22.5vw;
+     }
 }
 
 /* 검색 아이콘에 대한 스타일 */
@@ -342,6 +384,10 @@ z-index: 3;
     width: 1.5vw;
     height: 3vh;
     z-index: 4;
+    @media only screen and (max-width: 440px) {
+        top: 13%;
+        right: 21vw;
+     }
 }
 
 
@@ -366,6 +412,11 @@ text-align: right;
 
 /* snb color 2 */
 color: #000958;
+@media only screen and (max-width: 440px) {
+    left:50%;
+    font-size: 12px;
+    
+  }
 
 
 }
@@ -382,6 +433,12 @@ background: url("../img/mainp1.svg");
 background-size: cover;
 background-repeat: no-repeat;
 border-radius: 16px;
+@media only screen and (max-width: 440px) {
+   width: 80vw;
+   left: 10%;
+   
+ }
+
 }
 .medGuideBox1 h1{
     /* 약은 물과 함께, */
@@ -402,8 +459,20 @@ align-items: center;
 text-align: right;
 
 color: #FFFFFF;
+@media only screen and (max-width: 440px) {
+    width: 80vw;
+    left:60%;
+    font-size: 20px;
+    
+  }
 
 
+}
+.medGuideBox1 img{
+    @media only screen and (max-width: 440px) {
+        display: none;
+        
+      }
 }
 .medGuideBox1 span{
     /* 약은 물과 함께 복용하는 것이 가장 좋습니다. 물과 함께 마시면 약을 녹여 흡수를 돕고, 식도나 위에 달라붙지 않도록 해요. 또한 위장장애의 위험도 줄일 수 있어요. */
@@ -424,7 +493,13 @@ align-items: center;
 text-align: right;
 
 color: #FFFFFF;
-
+@media only screen and (max-width: 440px) {
+    left:2%;
+    width: 75vw;
+    text-align: left;
+    font-size: 12px;
+    
+  }
 
 }
 .goormGuide{
@@ -439,6 +514,14 @@ margin-top:-1vh;
 background: url("../img/goormguide.svg");
 filter: drop-shadow(4px 4px 10px rgba(0, 9, 88, 0.2));
 background-size: contain; /* 이미지가 컨테이너에 맞도록 조정 */
+@media only screen and (max-width: 440px) {
+    top: 10%;
+    left:2%;
+    width: 150px;
+    height: 100px;
+
+    
+  }
 transform-origin: center center; /* 회전 중심을 가운데로 조정 */
 
 }
@@ -455,7 +538,11 @@ background: url("../img/mainp2.svg");
 background-size: cover;
 background-repeat: no-repeat;
 border-radius: 16px;
-
+@media only screen and (max-width: 440px) {
+    width: 80vw;
+    left: 10%;
+    
+  }
 
 }
 
@@ -472,13 +559,31 @@ background: url("../img/goormguidefooter.svg");
 filter: drop-shadow(4px 4px 10px rgba(0, 9, 88, 0.2));
 background-size: contain; /* 이미지가 컨테이너에 맞도록 조정 */
 transform-origin: center center; /* 회전 중심을 가운데로 조정 */
+@media only screen and (max-width: 440px) {
+    left: 60%;
+    
+  }
 
 }
 .MedKnowledgeContainer{
     position: absolute;
-    margin-top:100vh;
-    width:100%;
+    margin-left: 2vw;
+    margin-top:42.5vw;
+    width:100vw;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
     height: 100vh*0.5;
+    @media only screen and (max-width: 1400px) {
+        margin-top:42.5vw;
+     }
+     @media only screen and (max-width: 1200px) {
+        margin-top:62.5vw;
+     }
+     @media only screen and (max-width: 1200px) {
+        margin-top:62.5vw;
+        margin-left: 4vw;
+     }
 }
 .MedKnowledge{
     /* 구름 상식 */
@@ -500,35 +605,52 @@ align-items: center;
 
 /* snb color 2 */
 color: #000958;
+@media only screen and (max-width: 1200px) {
+    left: 0;
+ }
 
 
 }
 .KnowledgeBox1{
     /* Group 442 */
-
-position: absolute;
-width: 22vw;
+width: 330px;
 height: 200px;
-left: 28.5vw;
 margin-top: 117.5vh;
 background: url("../img/mainp3.svg");
 background-size: cover;
 background-repeat: no-repeat;
 border-radius: 16px;
+@media only screen and (max-width: 1200px) {
+
+ }
+ @media only screen and (max-width: 800px) {
+
+ }
+ @media only screen and (max-width: 1200px) {
+    height: 100px;
+ }
+
 
 }
 .KnowledgeBox2{
     /* Group 445 */
 
-position: absolute;
-width: 22vw;
+width: 330px;
 height: 200px;
-left: 51.5vw;
 margin-top: 117.5vh;
 background: url("../img/mainp4.svg");
 background-size: cover;
 background-repeat: no-repeat;
 border-radius: 16px;
+@media only screen and (max-width: 1200px) {
+ }
+ @media only screen and (max-width: 800px) {
+
+ }
+ @media only screen and (max-width: 1200px) {
+    height: 100px;
+ }
+
 
 }
 
@@ -545,6 +667,12 @@ background: url("../img/KnowledgeGoorm.svg");
 filter: drop-shadow(4px 4px 10px rgba(0, 9, 88, 0.2));
 background-size: contain; /* 이미지가 컨테이너에 맞도록 조정 */
 transform-origin: center center; /* 회전 중심을 가운데로 조정 */
+@media only screen and (max-width: 1200px) {
+    margin-top: 128vh;
+    left: 0;
+    width: 90px;
+    height: 60px;
+ }
 }
 .Footer{
 
