--- a/front/src/style/style.scss
+++ b/front/src/style/style.scss
@@ -1663,6 +1663,13 @@ background: linear-gradient(180deg, #DFDFDF 0%, rgba(217, 217, 217, 0) 100%);
 border: 2px solid #AAB3FF;
 border-radius: 50%;
 box-shadow: inset 6px 4px 8px rgba(0, 0, 0, 0.2);
+@media only screen and (max-width: 800px) {
+    left: 2%;
+   }
+   @media only screen and (max-width: 440px) {
+    top: 15%;
+    left: 7%;
+   }
 
 }
 .MyIcon img{
@@ -1690,6 +1697,11 @@ align-items: center;
 
 /* snb color 2 */
 color: #000958;
+@media only screen and (max-width: 440px) {
+    margin-top:62.5%;
+    margin-left: 15%;
+    font-size: 20px;
+   }
 
 
 }
@@ -1719,7 +1731,11 @@ align-items: center;
 text-align: center;
 
 color: #FFFFFF;
-
+@media only screen and (max-width: 800px) {
+    top: 5%;
+    left: 20%;
+    width: 200px;
+   }
 
 }
 .MedShouldNotTakeContainer{
@@ -1733,6 +1749,10 @@ color: #FFFFFF;
     border: 1px solid #AAB3FF;
     background: #FFF;
     box-shadow: 0px 0px 25px 7px rgba(170, 179, 255, 0.30);
+    @media only screen and (max-width: 800px) {
+        width: 100%;
+        left: 1%;
+       }
 }
 .MedShouldNotTakeContainer h1{
     position: absolute;
@@ -1749,6 +1769,7 @@ color: #FFFFFF;
     height: 100%;
     display: flex;
     gap: 2px;
+    
 }
 .addMedCircle{
    /* Rectangle 64 */
@@ -1807,6 +1828,9 @@ align-items: center;
 text-align: center;
 
 color: #FFFFFF;
+@media only screen and (max-width: 1100px) {
+  right: 0px;
+ }
 
 
 }
@@ -1842,7 +1866,9 @@ justify-content: center;
 color: #FFFFFF;
 
 cursor: pointer;
-
+@media only screen and (max-width: 1100px) {
+    right: 0px;
+   }
 
 }
 .deleteMed img{
